--- a/propsreact/src/index.css
+++ b/propsreact/src/index.css
@@ -1,14 +1,14 @@
 #core-concepts {
   padding: 2rem;
   border-radius: 6px;
-  background-color: rgb(212, 212, 212);
+  background-color: rgb(95, 93, 93);
   box-shadow: 0 2px 8px rgba(0, 0, 0 ,0.4);
 }
 main h2 {
   text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0 0 1.5rem 0; 
- color: white;
+ color: blue;
 }
 #core-concept ul{
   list-style: none;
